--- a/packages/react/src/Tooltip/Tooltip.module.css
+++ b/packages/react/src/Tooltip/Tooltip.module.css
@@ -4,7 +4,7 @@
 
 @media (forced-colors: active) {
   .Tooltip {
-    outline: 1px solid transparent;
+    outline: var(--brand-borderWidth-thin) solid transparent;
   }
 }
 
