--- a/packages/react/src/Tooltip/Tooltip.module.css
+++ b/packages/react/src/Tooltip/Tooltip.module.css
@@ -129,7 +129,7 @@
   position: absolute;
   display: block;
   height: 100%;
-  width: 8px; /* This is a "magic number". Just gives some room to make sure the tooltip stay open when mouse leaves the trigger to hover tooltip */
+  width: var(--base-size-8); /* This is a "magic number". Just gives some room to make sure the tooltip stay open when mouse leaves the trigger to hover tooltip */
   content: '';
   bottom: 0;
   left: 100%;
