--- a/packages/react/src/SubNav/SubNav.module.css
+++ b/packages/react/src/SubNav/SubNav.module.css
@@ -30,6 +30,14 @@
   background-color: var(--brand-color-canvas-default);
 }
 
+.SubNav__action-container {
+  margin-left: auto;
+}
+
+.SubNav__sub-menu-icon {
+  display: none !important;
+}
+
 /*
  * Narrow breakpoint
  */
@@ -104,7 +112,8 @@
     padding-inline: 0;
   }
 
-  .SubNav__link {
+  .SubNav__link,
+  .SubNav__action-container {
     display: none;
     text-decoration: none;
   }
@@ -113,10 +122,22 @@
     color: var(--brand-SubNav-color-link-active);
   }
 
-  .SubNav__links-overlay--open .SubNav__link {
+  .SubNav__links-overlay--open .SubNav__link,
+  .SubNav__links-overlay--open .SubNav__action-container {
     display: block;
     padding: var(--base-size-8) 0;
     animation: fade-in 0.3s var(--brand-animation-easing-glide) forwards;
+  }
+  .SubNav__links-overlay--open .SubNav__action-container {
+    width: 100%;
+  }
+
+  .SubNav__links-overlay--open .SubNav__action {
+    width: 100%;
+  }
+
+  .SubNav__sub-menu {
+    padding-inline-start: var(--base-size-16);
   }
 }
 
@@ -147,6 +168,7 @@
 @media screen and (min-width: 63.25rem) {
   .SubNav {
     padding: var(--base-size-16) var(--base-size-32);
+    align-items: center;
   }
 
   .SubNav__overlay-toggle {
@@ -171,12 +193,14 @@
     display: flex;
     gap: var(--base-size-24);
     z-index: 1;
+    width: 100%;
   }
 
   .SubNav__link {
     text-decoration: none !important; /* dotcom override */
     transition: color 0.2s var(--brand-animation-easing-glide);
     position: relative;
+    padding: 4px 0;
   }
 
   .SubNav__link:hover *,
@@ -220,6 +244,77 @@
 
   .SubNav__link:focus-visible .SubNav__link-label::after {
     opacity: 0;
+  }
+
+  .SubNav__sub-menu {
+    background-clip: padding-box;
+    background-color: var(--brand-SubNav-color-subMenu-bgColor);
+    border: var(--borderWidth-thin, max(1px, 0.0625rem)) solid var(--borderColor-default, var(--color-border-default));
+    border-radius: var(--borderRadius-medium, 0.375rem);
+    box-shadow: var(--shadow-floating-legacy, var(--color-shadow-large));
+    left: 0;
+    list-style: none;
+    margin-top: calc(var(--base-size-4) / 4 * -4);
+    padding: var(--base-size-16) var(--base-size-24);
+    position: absolute;
+    top: 100%;
+    z-index: 100;
+    transition-timing-function: var(--brand-animation-easing-glide);
+    transition-duration: var(--brand-animation-duration-fast);
+    transition-property: opacity, transform;
+    left: calc(var(--base-size-4) / 4 * -16);
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0.99) translateY(-0.7em);
+    transform-origin: top;
+    display: flex;
+    flex-direction: column;
+    gap: var(--base-size-16);
+    width: var(--brand-SubNav-width-subMenu);
+  }
+
+  .SubNav__link:hover .SubNav__sub-menu {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1) translateY(0);
+    box-shadow: var(--brand-SubNav-shadow);
+  }
+
+  .SubNav__sub-menu .SubNav__link {
+    display: block;
+  }
+  .SubNav__sub-menu .SubNav__link-label {
+    color: var(--brand-color-text-default);
+    font-weight: var(--brand-text-weight-100);
+    font-size: var(--brand-text-size-100);
+    line-height: var(--brand-text-lineHeight-100);
+    letter-spacing: var(--brand-text-letterSpacing-100);
+  }
+
+  .SubNav__sub-menu .SubNav__link:hover .SubNav__link-label {
+    color: var(--brand-SubNav-color-link-active);
+  }
+
+  .SubNav__sub-menu .SubNav__link-label::after,
+  .SubNav__link--has-sub-menu .SubNav__link-label::after {
+    display: none;
+  }
+
+  .SubNav__link--has-sub-menu {
+    display: inline-flex;
+    align-items: center;
+    gap: var(--base-size-4);
+    cursor: pointer;
+  }
+
+  .SubNav__sub-menu-icon {
+    display: inline-block !important;
+    fill: var(--brand-color-text-muted);
+    transition: transform var(--brand-animation-duration-fast);
+  }
+
+  .SubNav__link--has-sub-menu:hover .SubNav__sub-menu-icon {
+    transform: translateY(2px);
   }
 }
 
