--- a/packages/react/src/Hero/Hero.module.css
+++ b/packages/react/src/Hero/Hero.module.css
@@ -60,11 +60,15 @@
 }
 
 .Hero-actions {
-  margin-top: var(--base-size-32);
+  margin-block-start: var(--base-size-32);
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   gap: var(--base-size-16);
+}
+
+.Hero-trailing {
+  margin-block-start: var(--base-size-32);
 }
 
 .Hero-eyebrow {
