apply design updates

--- a/packages/react/src/Pagination/Pagination.module.css
+++ b/packages/react/src/Pagination/Pagination.module.css
@@ -10,7 +10,7 @@
 }
 
 .Pagination__item {
-  min-width: var(--base-size-32);
+  min-width: var(--base-size-36);
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -18,10 +18,10 @@
   user-select: none;
   text-decoration: none;
   padding: var(--base-size-4) var(--base-size-8);
-  margin-right: var(--base-size-8); /* replace with your space */
-  background-color: transparent;
-  border-radius: var(--brand-borderRadius-medium); /* replace with your radius */
-  transition: background-color var(--brand-animation-duration-fast) var(--brand-animation-easing-default);
+  margin-right: var(--base-size-8);
+  border: var(--brand-borderWidth-thick) solid transparent;
+  border-radius: var(--brand-borderRadius-medium);
+  transition: border-color var(--brand-animation-duration-fast) var(--brand-animation-easing-default);
 }
 
 .Pagination__item--hidden,
@@ -63,9 +63,9 @@
 .Pagination__item:hover,
 .Pagination__item:focus {
   text-decoration: none;
-  background-color: var(--brand-pagination-link-bgColor-hover); /* replace with your color */
   outline: 0;
   transition-duration: 0.1s;
+  border-color: var(--brand-pagination-borderColor-hover);
 }
 
 .Pagination__item::after {
@@ -73,13 +73,13 @@
 }
 
 .Pagination__item:active {
-  border-color: gray; /* replace with your color */
+  border-color: var(--brand-pagination-link-bgColor-active);
 }
 
 .Pagination__item[aria-current],
 .Pagination__item[aria-current]:hover {
-  color: white; /* replace with your color */
-  background-color: var(--brand-pagination-link-bgColor-active); /* replace with your color */
+  color: white;
+  background-color: var(--brand-pagination-link-bgColor-active);
   border-color: transparent;
 }
 
@@ -91,7 +91,7 @@
 .Pagination__item[aria-disabled]:hover,
 .Pagination__item[role='presentation'],
 .Pagination__item[role='presentation']:hover {
-  color: gray; /* replace with your color */
+  color: var(--brand-color-text-muted);
   cursor: default;
   background-color: transparent;
   border-color: transparent;
@@ -99,6 +99,13 @@
   font-family: inherit;
   padding-top: inherit;
   padding-bottom: inherit;
+}
+
+.Pagination__item[aria-disabled] *,
+.Pagination__item[aria-disabled]:hover *,
+.Pagination__item[role='presentation'] *,
+.Pagination__item[role='presentation']:hover * {
+  color: inherit;
 }
 
 .Pagination__item[rel='prev'] {
