--- a/packages/react/src/IDE/IDE.module.css
+++ b/packages/react/src/IDE/IDE.module.css
@@ -1,6 +1,3 @@
-.IDE {
-}
-
 .IDE__inner {
   background: var(--brand-IDE-default-bgColor);
   border: var(--brand-borderWidth-thin) solid var(--brand-IDE-borderColor);
@@ -153,7 +150,7 @@
   padding: var(--base-size-16);
   border-radius: var(--brand-borderRadius-large);
   font-family: var(--brand-fontStack-monospace);
-  font-size: var(--base-size-14);
+  font-size: calc(var(--base-size-12) + 2px) !important; /* workaround dotcom specificity */
 }
 
 /**
@@ -191,7 +188,7 @@
   align-items: center;
   gap: var(--base-size-4);
   font-family: var(--brand-fontStack-monospace);
-  font-size: var(--base-size-14);
+  font-size: calc(var(--base-size-12) + 2px);
   color: var(--brand-color-text-muted);
   cursor: pointer;
   border: none;
@@ -279,6 +276,24 @@ img.IDE__Editor-tab-icon {
   margin: 0;
 }
 
+.IDE__Editor--small .IDE__Editor-pane,
+.IDE__Editor--small .IDE__Editor-lineNumbers {
+  font-size: calc(var(--base-size-12) -1px) !important; /* workaround dotcom specificity */
+  line-height: calc(var(--base-size-16) + 2px) !important; /* workaround dotcom specificity */
+}
+
+.IDE__Editor--medium .IDE__Editor-pane,
+.IDE__Editor--medium .IDE__Editor-lineNumbers {
+  font-size: 0.875rem !important; /* workaround dotcom specificity */
+  line-height: 19.9px !important; /* workaround dotcom specificity */
+}
+
+.IDE__Editor--large .IDE__Editor-pane,
+.IDE__Editor--large .IDE__Editor-lineNumbers {
+  font-size: 1.125rem !important; /* workaround dotcom specificity */
+  line-height: var(--base-size-24) !important; /* workaround dotcom specificity */
+}
+
 .IDE__Editor-pane--suggested {
   background-color: var(--brand-IDE-autoSuggestLine-bgColor);
 }
@@ -292,21 +307,6 @@ img.IDE__Editor-tab-icon {
   font-variation-settings: normal;
   letter-spacing: 0;
   width: 45px;
-}
-
-.IDE__Editor--small .IDE__Editor-lineNumbers {
-  font-size: var(--base-size-12);
-  line-height: 18px;
-}
-
-.IDE__Editor--medium .IDE__Editor-lineNumbers {
-  font-size: var(--base-size-14);
-  line-height: var(--base-size-20);
-}
-
-.IDE__Editor--large .IDE__Editor-lineNumbers {
-  font-size: 18px;
-  line-height: var(--base-size-24);
 }
 
 .IDE__Editor-lineNumber {
@@ -357,21 +357,6 @@ pre.IDE__Chat-copilot-indicator {
 .IDE__Chat-copilot-indicator-label {
   color: var(--brand-IDE-autoSuggest-fgColor);
   fill: var(--brand-IDE-autoSuggest-fgColor);
-}
-
-.IDE__Editor--small {
-  line-height: 18px;
-  font-size: 11px;
-}
-
-.IDE__Editor--medium {
-  font-size: 14px;
-  line-height: 19.9px;
-}
-
-.IDE__Editor--large {
-  font-size: 18px;
-  line-height: 23.9px;
 }
 
 .IDE__Editor-replay {
