--- a/packages/react/src/IDE/IDE.module.css
+++ b/packages/react/src/IDE/IDE.module.css
@@ -278,7 +278,7 @@ img.IDE__Editor-tab-icon {
 
 .IDE__Editor--small .IDE__Editor-pane,
 .IDE__Editor--small .IDE__Editor-lineNumbers {
-  font-size: calc(var(--base-size-12) -1px) !important; /* workaround dotcom specificity */
+  font-size: calc(var(--base-size-12) - 1px) !important; /* workaround dotcom specificity */
   line-height: calc(var(--base-size-16) + 2px) !important; /* workaround dotcom specificity */
 }
 
