--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -235,6 +235,7 @@
 
 .Prose--editorial figure img {
   margin-block-end: 0;
+  border-radius: var(--brand-borderRadius-medium);
 }
 
 /* ---------------------------------------------------------- */
