--- a/packages/react/src/recipes/seo/Category/CategoryPage.module.css
+++ b/packages/react/src/recipes/seo/Category/CategoryPage.module.css
@@ -31,3 +31,7 @@
   color: var(--brand-color-text-default);
   background-color: var(--brand-color-canvas-subtle);
 }
+
+.cardGrid {
+  --brand-Grid-spacing-row: var(--base-size-48);
+}
