--- a/packages/react/src/SubNav/SubNav.module.css
+++ b/packages/react/src/SubNav/SubNav.module.css
@@ -126,7 +126,7 @@
     text-decoration: none;
   }
 
-  .SubNav__links-overlay--open .SubNav__link[aria-current] * {
+  .SubNav__links-overlay--open .SubNav__link[aria-current]:not([aria-current='false']) * {
     color: var(--brand-SubNav-color-link-active);
   }
 
@@ -220,7 +220,7 @@
   }
 
   .SubNav__link:hover *,
-  .SubNav__link[aria-current] * {
+  .SubNav__link[aria-current]:not([aria-current='false']) * {
     color: var(--brand-SubNav-color-link-active);
     text-decoration: none !important; /* dotcom override */
   }
@@ -242,7 +242,7 @@
 
   .SubNav__link:hover .SubNav__link-label::after,
   .SubNav__link:focus .SubNav__link-label::after,
-  .SubNav__link[aria-current] .SubNav__link-label::after {
+  .SubNav__link[aria-current]:not([aria-current='false']) .SubNav__link-label::after {
     opacity: 1;
     transform: translate3d(0, 0.2em, 0);
     transform: scale(0.8, 1);
