--- a/packages/react/src/recipes/seo/Article/Article.module.css
+++ b/packages/react/src/recipes/seo/Article/Article.module.css
@@ -20,6 +20,41 @@
   padding: 0;
 }
 
+.heroTitle {
+  position: relative;
+  margin-block: -4px;
+  padding-block: 4px;
+}
+
+.heroLines {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+}
+
+@keyframes wipe {
+  from {
+    transform: scaleX(1);
+  }
+  to {
+    transform: scaleX(0);
+  }
+}
+
+.heroLine {
+  width: 100%;
+  min-height: calc(1lh + 4px);
+  background-color: var(--brand-color-canvas-default);
+  transform-origin: right;
+  animation: wipe 0.6s forwards cubic-bezier(0.74, 0.04, 0.6, 1);
+}
+
 .heroImageArea {
   overflow: hidden;
 }
