--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -2,7 +2,7 @@
   display: grid;
   width: 100%;
   grid-template-columns: repeat(12, minmax(0, 1fr));
-  grid-auto-rows: var(--base-size-80);
+  grid-auto-rows: minmax(var(--base-size-80), max-content);
   grid-gap: var(--brand-Bento-gap-small);
   position: relative;
 }
