--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -80,6 +80,8 @@
   width: 100%;
   position: relative;
   z-index: 91; /* must be higher than subdomain nav bar */
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
 .AnchorNav--with-default-background-color .AnchorNav-inner-container {
