accommodate for the container padding

--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -80,7 +80,7 @@
   width: 100%;
   position: relative;
   z-index: 91; /* must be higher than subdomain nav bar */
-  max-height: 100vh;
+  max-height: calc(100vh - var(--base-size-12) * 2);
   overflow-y: auto;
 }
 
