adding the stop "speed" to LogoSuite so it can be programmatically stopped

--- a/packages/react/src/LogoSuite/LogoSuite.module.css
+++ b/packages/react/src/LogoSuite/LogoSuite.module.css
@@ -124,7 +124,8 @@
   }
 }
 
-.LogoSuite__logobar--has-marquee:hover .LogoSuite__logobar-marqueeGroup {
+.LogoSuite__logobar--has-marquee:hover .LogoSuite__logobar-marqueeGroup,
+.LogoSuite__logobar-marqueeGroup--speed-stop {
   animation-play-state: paused;
 }
 
