--- a/packages/react/src/recipes/seo/Article/Article.module.css
+++ b/packages/react/src/recipes/seo/Article/Article.module.css
@@ -24,6 +24,7 @@
   position: relative;
   margin-block: -4px;
   padding-block: 4px;
+  line-height: 1.2;
 }
 
 .heroLines {
@@ -34,7 +35,8 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 4px);
+  padding-block-start: 4px;
   overflow-y: hidden;
 }
 
@@ -49,7 +51,7 @@
 
 .heroLine {
   width: 100%;
-  min-height: calc(1lh + 4px);
+  min-height: 1lh;
   background-color: var(--brand-color-canvas-default);
   transform-origin: right;
   animation: wipe 0.6s forwards cubic-bezier(0.74, 0.04, 0.6, 1);
