--- a/packages/react/src/recipes/seo/Article/Article.module.css
+++ b/packages/react/src/recipes/seo/Article/Article.module.css
@@ -24,20 +24,6 @@
   position: relative;
   margin-block: -4px;
   padding-block: 4px;
-  line-height: 1.2;
-}
-
-.heroLines {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  height: calc(100% - 4px);
-  padding-block-start: 4px;
-  overflow-y: hidden;
 }
 
 @keyframes wipe {
@@ -52,9 +38,21 @@
 .heroLine {
   width: 100%;
   min-height: 1lh;
+  position: relative;
+}
+
+.heroLine::after {
+  content: '';
+  display: inline;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
   background-color: var(--brand-color-canvas-default);
   transform-origin: right;
   animation: wipe 0.6s forwards cubic-bezier(0.74, 0.04, 0.6, 1);
+  animation-delay: calc(var(--line-index) * 150ms);
 }
 
 .heroImageArea {
