--- a/packages/react/src/LogoSuite/LogoSuite.module.css
+++ b/packages/react/src/LogoSuite/LogoSuite.module.css
@@ -40,12 +40,14 @@
 }
 
 .LogoSuite__logobar--variant-muted svg,
+.LogoSuite__logobar--variant-muted img,
 .LogoSuite__logobar--variant-muted a {
   width: auto;
   height: var(--base-size-40);
 }
 
 .LogoSuite__logobar--variant-emphasis svg,
+.LogoSuite__logobar--variant-emphasis img,
 .LogoSuite__logobar--variant-emphasis a {
   width: auto;
   height: var(--base-size-48);
@@ -56,9 +58,17 @@
   fill: var(--brand-LogoSuite-color-logo-muted);
 }
 
+.LogoSuite__logobar--variant-muted img {
+  filter: var(--brand-LogoSuite-color-image-muted)
+}
+
 .LogoSuite__logobar--variant-emphasis svg,
 .LogoSuite__logobar--variant-emphasis path {
   fill: var(--brand-LogoSuite-color-logo-emphasis);
+}
+
+.LogoSuite__logobar--variant-emphasis img {
+  filter: var(--brand-LogoSuite-color-image-emphasis)
 }
 
 .LogoSuite--start .LogoSuite__logobar {
